# pico-examples

i2c/: CMakeLists.txt
i2c/person_sensor_i2c/: CMakeLists.txt  README.adoc  person_sensor_i2c.c
